@@ -1,5 +1,11 @@
 SWIG (Simplified Wrapper and Interface Generator)
 
+1/13/00 : loic
+	  Source/Modules1.1/java.cxx: fixed char* -> const char* warnings that are
+	  errors when compiling with gcc-2.95.2
+	  Source/SWIG1.1/main.cxx: cast const char* to char* for String_replace 
+	  token and rep should really be const.
+
 1/12/00 : beazley
           Added Harco's Java modules.
 
